--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <artifactId>maven-clean-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
         <version>2.4</version>
- 
+     </plugin>
     </plugins>
   </build>
 
